tests/NormalTests/paczka1/small_fuzzy/97822593.err
Error in line 3: 5MpavXnQu S103 50,6
Error in line 6: RYfE A0 97,0
Error in line 4: 5MpavXnQu A921 41,0
Error in line 14: 3Q7wQ9Fmr A0 87,5
Error in line 15: 5MpavXnQu A0 68,5
